# HoloWare

./: CMakeLists.txt  README.md
Header/: Chicken.h  ChickenSpawner.h  Game.h  GameObject.h  GameObjectManager.h  ID.h  InaDoor.h  InaLoading.h  InaTimer.h  InaTransitionDoor.h  InaTransitionDoorClose.h  InaTransitionDoorOpen.h  InaTransitionHP.h  InaTransitionLoading.h  InaTransitionScene.h  InaTransitionTimer.h  Kiara.h  KiaraChickenChicken.h  KiaraChickenKiara.h  KiaraChickenPoints.h  KiaraChickenRock.h  KiaraChickenScene.h  KiaraChickenSpawner.h  KoroneYubiHand.h  KoroneYubiManager.h  KoroneYubiScene.h  KoroneYubiStream.h  MiniGame.h  MiniGameKiara.h  MiniGameManager.h  MiniGameNull.h  MusicID.h  MusicPlayer.h  Points.h  Scene.h  SceneGame.h  SceneKiaraMiniGame.h  SceneMiniGame.h  SceneNull.h  SceneTitle.h  (+3 more)
Ina_Transition/: CMakeLists.txt  InaTransitionDoor.cpp  InaTransitionDoor.h  InaTransitionDoorClose.cpp  InaTransitionDoorClose.h  InaTransitionDoorOpen.cpp  InaTransitionDoorOpen.h  InaTransitionHP.cpp  InaTransitionHP.h  InaTransitionLoading.cpp  InaTransitionLoading.h  InaTransitionScene.cpp  InaTransitionScene.h  InaTransitionTimer.cpp  InaTransitionTimer.h
Kiara_Loading_Minigame/: Background.cpp  Background.h  BackgroundPeople.cpp  BackgroundPeople.h  CMakeLists.txt  Chicken.cpp  Chicken.h  Kiara.cpp  Kiara.h  KiaraChickenChicken.cpp  KiaraChickenChicken.h  KiaraChickenKiara.cpp  KiaraChickenKiara.h  KiaraChickenPoints.cpp  KiaraChickenPoints.h  KiaraChickenRock.cpp  KiaraChickenRock.h  KiaraChickenScene.cpp  KiaraChickenScene.h  KiaraChickenScore.cpp  KiaraChickenScore.h  KiaraChickenSpawner.cpp  KiaraChickenSpawner.h  KiaraLoadingBackground.cpp  KiaraLoadingBackground.h  KiaraScene.cpp  KiaraScene.h  Points.cpp  Points.h  Register.cpp  Register.h  Rock.cpp  Rock.h  Score.cpp  Score.h  Spawner.cpp  Spawner.h
Korone_Yubi_Minigame/: CMakeLists.txt  KoroneYubiHand.cpp  KoroneYubiHand.h  KoroneYubiManager.cpp  KoroneYubiManager.h  KoroneYubiScene.cpp  KoroneYubiScene.h  KoroneYubiStream.cpp  KoroneYubiStream.h
Lib/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameObject.cpp  GameObjectManager.cpp  GameObjectManager.h  ID.h  LoadAssets.cpp  MP.cpp  MP.h  Math.cpp  Math.h  MiniGameManager.cpp  MiniGameManager.h  Particle.cpp  Particle.h  ParticleManager.cpp  ParticleManager.h  Scene.h  SceneNull.h  SceneTitle.cpp  SceneTitle.h  main.cpp
Source/: CMakeLists.txt  Camera.cpp  Chicken.cpp  ChickenSpawner.cpp  Game.cpp  GameObject.cpp  GameObjectManager.cpp  InaDoor.cpp  InaLoading.cpp  InaTimer.cpp  InaTransitionDoor.cpp  InaTransitionDoorClose.cpp  InaTransitionDoorOpen.cpp  InaTransitionHP.cpp  InaTransitionLoading.cpp  InaTransitionScene.cpp  InaTransitionTimer.cpp  Kiara.cpp  KiaraChickenChicken.cpp  KiaraChickenKiara.cpp  KiaraChickenPoints.cpp  KiaraChickenRock.cpp  KiaraChickenScene.cpp  KiaraChickenScore.cpp  KiaraChickenSpawner.cpp  KoroneYubiHand.cpp  KoroneYubiManager.cpp  KoroneYubiScene.cpp  KoroneYubiStream.cpp  LP.cpp  LoadAssets.cpp  LoadImage.cpp  MP.cpp  Math.cpp  MiniGame.cpp  MiniGameKiara.cpp  MiniGameManager.cpp  MusicPlayer.cpp  Points.cpp  SceneGame.cpp  (+6 more)
